--- a/projects/photo-app/src/App.css
+++ b/projects/photo-app/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  font-family: sans-serif;
+  background-color: #222;
+  overflow: auto;
 }
 
 .App-logo {
@@ -20,6 +23,8 @@
 
 .App-intro {
   font-size: large;
+  min-height: 400px;
+
 }
 
 @keyframes App-logo-spin {
