--- a/projects/photo-app/src/App.css
+++ b/projects/photo-app/src/App.css
@@ -1,33 +1,75 @@
-.App {
-  text-align: center;
+
+body{
   font-family: sans-serif;
   background-color: #222;
   overflow: auto;
 }
+.App {
+  text-align: center;
+
+}
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  /*animation: App-logo-spin infinite 10s linear;*/
+  height: 10em;
+  padding-top: 3em;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  min-height: 150px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 3.5em;
+  font-family: 'Bungee Shade', cursive;
 }
 
-.App-intro {
-  font-size: large;
-  min-height: 400px;
-
+#home-div{
+  background-color: #222;
+  overflow: hidden;
+  min-height: 300px;
+  animation: fade .8s;
+}
+#home-info{
+  color: #fff;
+}
+#sign-in{
+  width: 70%;
+  height: 40%;
+  border-radius: 10px;
+  font-family: 'Bungee Shade', cursive;
+  font-size: 2em;
+  background-color: rgb(164, 0, 0);
+  color: #fff;
+  cursor: pointer;
+  margin-top: 1em;
+}
+#outer-div{
+  border: 1px solid #fff;
+  background-color: rgb(164, 0, 0);
+  position: absolute;
+  z-index: 99999;
+  min-width: 300px;
+  min-height: 300px;
+  top: 40%;
+  left: 50%;
+  box-shadow: 3px 3px 3px black;
+  padding: 1em;
+  transform: translate(-50%, -50%);
+  animation: fade .8s;
+}
+#inner-div{
+  background-color: #222;
+  color: white;
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+@keyframes fade {
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
