--- a/projects/photo-app/src/App.css
+++ b/projects/photo-app/src/App.css
@@ -4,6 +4,7 @@ body{
   background-color: #222;
   overflow: auto;
   max-width: 780px;
+  margin: 0 auto;
 }
 .App {
   text-align: center;
@@ -41,6 +42,7 @@ body{
   position: absolute;
   z-index: 99999;
   width: 80%;
+  max-width: 750px;
   top: 50%;
   left: 50%;
   box-shadow: 3px 3px 3px black;
